--- a/investing/investing.html
+++ b/investing/investing.html
@@ -113,6 +113,9 @@
                          <li>
                               <a href="portfoliobuilding.html">Saving and Investing</a>
                          </li>
+                         <li>
+                              <a href="article.html">Perspectives in Investing</a>
+                         </li>
                     </ul>
 
                     <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financial advisor before making any investing decisions.</p>
