Gingko Profile Update

--- a/companies/companies.html
+++ b/companies/companies.html
@@ -98,7 +98,7 @@
                                    <a href="abcellera.html">AbCellera (ABCL)</a>
                               </li>
                               <li>
-                                   <a href="schrodinger.html">Shrodinger (SDGR)</a>
+                                   <a href="schrodinger.html">Schrodinger (SDGR)</a>
                               </li>
                          </ul>
                     </div>
