--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/13/2023</p>
+                    <p class="updated">Last Updated 3/1/2023</p>
 
                     <h1 class="company-name"><a href="https://www.ginkgobioworks.com/">Ginkgo Bioworks</a></h1>
 
@@ -108,10 +108,10 @@
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
                                    I have been following Ginkgo and Jason Kelly since they went public. I know a lot of people find him 
-                                   to be smug and arrogant. I used to defend him as passionate, but I have recently backed off after 
-                                   watching the top 3 management members in this company sell tens of millions of shares in the last few 
-                                   months. I suspect most of it is for tax purposes. I have now become a skeptic until proven otherwise 
-                                   with this management team.
+                                   to be smug and arrogant. I think he has done a really good job. Recently, I have been really concerned with 
+                                   all the insider sells from their stock awards. Jason Kelly addressed the issue on their earnings call. I think 
+                                   he took on a very hard question and handled it with grace and ease. I have even more respect for him after. I think 
+                                   are focused on the long term company building and not just impressing analysts for the next quater.
                               </p>
                          </section> 
                          
@@ -143,22 +143,27 @@
                                    Cash $1.3 billion
                               </p>
                               <p class="profiles">
-                                   Foundry only earns about $160 million in sales right now. That is because this platform is like a pipeline 
+                                   Foundry only earns about $175 million in sales right now. That is because this platform is like a pipeline 
                                    for other biotech companies. Programs are put into the foundry when a company partners with Ginkgo. It can take
                                    years for these programs to be completed to the level of commercial launch. They get paid a small amount for their 
                                    work, but most of the value is in the form of Equity Stakes, Royalties and Milestones. The key here is to watch 
                                    the number of programs they have in their pipeline. That is the indicator of potential future revenues. I think they 
-                                   could reach $1 billion in foundry revenues in the next 7 to 10 years. I would give this a value of $1.6 billion 
+                                   could reach $1 billion in foundry revenues in the next 7 to 10 years. I would give this a value of $1.75 billion 
                                    based on realistic price to sales on their current foundry sales.
                               </p>
                               <p class="profiles">
                                    Biosecurity has been really strong since Covid. There is some concern it could fall off as Covid sales 
-                                   fade. This hasn't happened yet as Covid has shown us how poorly prepared we were as a country and as a world to deal 
-                                   with pandemics. Right now, they are doing $300 million in biosecurity sales. That gives it a value of about $3 billion 
-                                   in value based on a realistic price to sales. 
+                                   fade. This started to happen as Covid testing sales slow and are replace my recurring longer term revenues 
+                                   from their preventitive programs. Right now, they are doing $100 million in biosecurity sales. That gives it 
+                                   a value of about $1 billion in value based on a realistic price to sales. 
+                              </p>
+                              <p>
+                                   The pipleline of the foundry has well over $2 billion in downstream value in the programs from 2022 alone. I 
+                                   would venture this pipeline is much bigger than that. I would give this a standard $500 million valuation for 
+                                   a typical early stage clinical pipeline.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $5.9 billion market cap. Based on the 1.6 billion shares outstanding , that comes to $3.68.
+                                   All in, that is a $4.55 billion market cap. Based on the 1.6 billion shares outstanding , that comes to $2.84.
                               </p>
                          </section>  
 
