Gingko Profile Update

--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -109,9 +109,9 @@
                               <p class="profiles">
                                    I have been following Ginkgo and Jason Kelly since they went public. I know a lot of people find him 
                                    to be smug and arrogant. I think he has done a really good job. Recently, I have been really concerned with 
-                                   all the insider sells from their stock awards. Jason Kelly addressed the issue on their earnings call. I think 
+                                   all the insider sales from their stock awards. Jason Kelly addressed the issue on their earnings call. I think 
                                    he took on a very hard question and handled it with grace and ease. I have even more respect for him after. I think 
-                                   are focused on the long term company building and not just impressing analysts for the next quater.
+                                   they are focused on the long term company building and not just impressing analysts for the next quarter.
                               </p>
                          </section> 
                          
@@ -153,13 +153,13 @@
                               </p>
                               <p class="profiles">
                                    Biosecurity has been really strong since Covid. There is some concern it could fall off as Covid sales 
-                                   fade. This started to happen as Covid testing sales slow and are replace my recurring longer term revenues 
-                                   from their preventitive programs. Right now, they are doing $100 million in biosecurity sales. That gives it 
+                                   fade. This started to happen as Covid testing sales slow and are being replaced by recurring longer term revenues 
+                                   from their preventive programs. Right now, they are doing $100 million in biosecurity sales. That gives it 
                                    a value of about $1 billion in value based on a realistic price to sales. 
                               </p>
                               <p>
-                                   The pipleline of the foundry has well over $2 billion in downstream value in the programs from 2022 alone. I 
-                                   would venture this pipeline is much bigger than that. I would give this a standard $500 million valuation for 
+                                   The pipeline of the foundry has well over $2 billion in downstream value in the programs from 2022 alone. I 
+                                   would venture that this pipeline is much bigger than that. I would give this a standard $500 million valuation for 
                                    a typical early stage clinical pipeline.
                               </p>
                               <p class="profiles">
