--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="news-title">Website Updates</h2>
-
+                              <p> 
+                                   <strong>3/1/2023: </strong> I updated the profile for <a href="companies/ginkgo.html">DNA</a>
+                                   as far as I can without the 10K. 
+                              </p>
                               <p> 
                                    <strong>3/1/2023: </strong>I added a <a href="investing/article.html">Persepectives Page</a> where I plan to occasionally post articles about 
                                    investing in biotech. 
@@ -150,18 +153,6 @@
                               </p>
                               <p> 
                                    <strong>2/28/2023: </strong> I update the profile for <a href="companies/invitae.html">NVTA</a>
-                                   after doing the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/beam.html">BEAM</a>
-                                   after doing the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/recursion.html">RXRX</a>
-                                   after doing the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/revolution.html">RVMD</a>
                                    after doing the 10K. 
                               </p>
                               
