Verve Profile Update

--- a/companies/verve.html
+++ b/companies/verve.html
@@ -81,7 +81,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/13/2023</p>
+                    <p class="updated">Last Updated 3/2/2023</p>
 
                     <h1 class="company-name"><a href="https://www.vervetx.com/">Verve Therapeutics</a></h1>
 
@@ -92,11 +92,12 @@
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
                                    Verve is one of the two companies working with Base Editing. They licensed the technology from Beam 
-                                   Therapeutics. They have the right to pick 4 gene targets for cardiovascular diseases. They have picked 
-                                   PCSK9 and ANGPTL3 so far, and have 2 more they can pick. They have a license for CRISPR CAS12 which
+                                   Therapeutics. They have the right to pick several gene targets for cardiovascular diseases. They have picked 
+                                   PCSK9 and ANGPTL3 so far, and have a deal to pick more. They have a license for CRISPR CAS12 which
                                    they license from Broad Institute and Harvard. Verve has a development platform for guided 
                                    LNP delivery. They have a delivery technology for their liver targets which is designed to target GalNac.
-                                   Beam licenses this guided LNP from them for some of its liver programs. 
+                                   Beam licenses this guided LNP from them for some of its liver programs. They are also working on their own 
+                                   gene editing platform.
                               </p>
                          </section>  
 
@@ -105,8 +106,8 @@
                               <p class="profiles">
                                    I haven't been following Verve or Sekar Kathiresan all that long. I do think he is a good CEO, but I 
                                    think he overestimates the potential for these therapies to take market share for existing therapies. 
-                                   They are just starting in the clinic so we will have to wait to see some data. I do think they are 
-                                   doing a good job of managing the balance sheet well. They seem to focus on innovation with a new novel 
+                                   They are just starting in the clinic so we will have to wait to see the data. I do think they are 
+                                   doing a good job of managing the balance sheet. They seem to focus on innovation with a new gene 
                                    editor in the works.
                               </p>
                          </section>
@@ -116,7 +117,8 @@
                               <p class="profiles">
                                    VERV-101 is a gene editing therapy that knocks out the PCSK9 gene. This is a gene associated with cardiovascular 
                                    disease. They have some promising early data for the knock down of LDL. The early data in the preclinic showed 
-                                   about 67% LDL-C reduction. We will have to wait and see how that translates into humans with the phase 1 data.
+                                   about 67% LDL-C reduction. We will have to wait and see how that translates into humans with the phase 1 data. We 
+                                   should see some data in this program later this year.
                               </p>
                               <p class="profiles">
                                    VERV-201 is a gene editing therapy that knocks out the ANGPTL3 gene. This gene plays a role in triglyceride 
@@ -131,7 +133,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $550 million
+                                   Cash $554 million
                               </p>
                               <p class="profiles">
                                    VERV-101 I think this will be a very competitive space competing with other PCSK9 antibodies and RNAi therapies.
@@ -147,14 +149,21 @@
                                    of development. That comes out to another $80 million value.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $710 million market cap. Based on the 61 million shares outstanding, that comes to $11.63.
+                                   All in, that is a $714 million market cap. Based on the 61.8 million shares outstanding, that comes to $11.55.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Beam license is for 3 targets right now. The first 2 are PCSK9 and ANGPTL3, of which Beam has the option 
+                                   to opt into these programs and participate in 50% of the US sales. For the 3rd gene target, Beam has the right 
+                                   to opt into this program for 35% of the world wide sales. Any areas that are not affected under these opt in rights, 
+                                   will receive royalties in the low to mid single digits.
+                              </p>
+                              <p class="profiles">
+                                   Vertex collaboration for 4 years to develop gene editing therapies toward an undisclosed liver target. They can 
+                                   get up to $340 million per program along with tiered single digit royalties.
                               </p>
                          </section>
 
@@ -164,7 +173,10 @@
                                    VERV-101 Initial Data in 2H 2023 outside US
                               </p>
                               <p class="profiles">
-                                   VER-201 First Patient Dosing expected in 2023
+                                   VERV-101 On Clinical Hold in US
+                              </p>
+                              <p class="profiles">
+                                   VER-201 Trial Initiation Expected in 2024
                               </p>
                          </section> 
 
