--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                          <div>
                               <h2 class="news-title">Website Updates</h2>
                               <p> 
+                                   <strong>3/2/2023: </strong> I updated the profile for <a href="companies/verve.html">VERV</a>
+                                   as far as I can without the 10K. 
+                              </p>
+                              <p> 
                                    <strong>3/1/2023: </strong> I updated the profile for <a href="companies/ginkgo.html">DNA</a>
                                    as far as I can without the 10K. 
                               </p>
