--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                          <div>
                               <h2 class="news-title">Recent News</h2>
                               <p>
+                                   <strong>2/10/2023: </strong> I had a bid trigger this morning for <a href="companies/revolution.html">RVMD</a>
+                                   after Merrill Lynch executed my limit order as a market and riped me off. Now I need a new broker.
+                              </p>
+                              <p>
                                    <strong>2/10/2023: </strong> I added to my <a href="companies/beam.html">BEAM</a> position today
                                    to bring it up to 5.22% position.
                               </p>
