Added Robinhood Porfolio

--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
                          <div>
                               <h2 class="news-title">Recent News</h2>
                               <p>
-                                   <strong>2/10/2023: </strong> I had a bid trigger this morning for <a href="companies/revolution.html">RVMD</a>
+                                   <strong>3/2/2023: </strong> I pulled all remaining cash from my broker and started a new account at 
+                                   Robinhood with the money. I plan to transition over time away from my old broker to Robinhood. 
+                              </p>
+                              <p>
+                                   <strong>3/2/2023: </strong> I had a bid trigger this morning for <a href="companies/revolution.html">RVMD</a>
                                    after Merrill Lynch executed my limit order as a market and riped me off. Now I need a new broker.
                               </p>
                               <p>
@@ -131,6 +135,11 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="news-title">Website Updates</h2>
+                              <p> 
+                                   <strong>3/2/2023: </strong> Added a new Robinhood Biotech Portfolio to the Portfolio section. My plan 
+                                   is to fade out of my old broker when market recovery and spread out the cash across a few other apps like 
+                                   Robinhood for biotech and Cash App for tech.  
+                              </p>
                               <p> 
                                    <strong>3/2/2023: </strong> I updated the profile for <a href="companies/verve.html">VERV</a>
                                    as far as I can without the 10K. 
