New Innovation Page

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
                          <div>
                               <h2 class="news-title">Website Updates</h2>
                               <p> 
+                                   <strong>3/3/2023: </strong> Be the first to check out our new <a href="innovation/innovation.html">Innovation Page.</a> 
+                                   I haven't had time to proofread it yet so feel free to let me know if you find any typos.
+                              </p>
+                              <p> 
                                    <strong>3/2/2023: </strong> Added a new Robinhood Biotech Portfolio to the Portfolio section. My plan 
                                    is to fade out of my old broker when market recovery and spread out the cash across a few other apps like 
                                    Robinhood for biotech and Cash App for tech.  
@@ -158,10 +162,6 @@
                               </p>
                               <p> 
                                    <strong>3/1/2023: </strong> I update the profile for <a href="companies/fate.html">FATE</a>
-                                   after doing the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>3/1/2023: </strong> I update the profile for <a href="companies/schrodinger.html">SDGR</a>
                                    after doing the 10K. 
                               </p>
                          
