--- a/investing/portfolio.html
+++ b/investing/portfolio.html
@@ -79,7 +79,7 @@
 
           <main>
 
-               <ul class="investor-link">
+               <ul class="container">
                     <li>Portfolio:</li>
                     <li><a href="#merrill">Merrill Legacy Portfolio</a></li>
                     <li><a href="#robinhood">Robindhood Biotech Portfolio</a></li>
