--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
                          <div>
                               <h2 class="news-title">Recent News</h2>
                               <p>
+                                   <strong>3/3/2023: </strong> Moved the Cash I took from Merrill to Robinhood to find that account.
+                                   As soon as we have a good biotech down day, I plan to start my core positions in each of the stocks
+                                   I picked. 
+                              </p>
+                              <p>
                                    <strong>3/2/2023: </strong> I pulled all remaining cash from my broker and started a new account at 
                                    Robinhood with the money. I plan to transition over time away from my old broker to Robinhood. 
                               </p>
@@ -126,15 +131,16 @@
                               <p>
                                    <strong>2/10/2023: </strong> I sold just enough for my XBI in my Charity IRA to buy .94% position in <a href="companies/crispr.html">CRSP</a>.
                               </p>
-                              <p>
-                                   <strong>2/10/2023: </strong> I added a starting position in <a href="companies/verve.html">VERV</a> to my Charity IRA of .94%.
-                              </p>
                          </div>
                     </section>
 
                     <section class="news-updates">
                          <div>
                               <h2 class="news-title">Website Updates</h2>
+                              <p> 
+                                   <strong>3/3/2023: </strong> Started with some new styling on the website. So far, I got the Innovation 
+                                   Page done. This is part of making it look better.
+                              </p>
                               <p> 
                                    <strong>3/3/2023: </strong> Be the first to check out our new <a href="innovation/innovation.html">Innovation Page.</a> 
                                    I haven't had time to proofread it yet so feel free to let me know if you find any typos.
