New Innovation Page

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <main>
                <div class="logo"><img class="page-logo" src="images/thumbnail.jpg" alt="Biotech2k.com"></div>
                
-               <div class="main-lists">
-                    <div>
-                         <ul class="investor-link">
+               <div class="front-page">
+                    <div class="news-updates">
+                         <ul>
                               <li>Quick Links:</li>
                               <li><a href="investing/portfolio.html">My Portfolio</a></li>
                               <li><a href="companies/companies.html">Company Profiles</a></li>
@@ -93,8 +93,8 @@
                          </ul>
                     </div> 
 
-                    <div>
-                         <ul class="investor-link">
+                    <div class="news-updates">
+                         <ul>
                               <li>Perspectives:</li>
                               <li><a href="investing/article.html#tomorrow">You Can Have the Future of Towmorrow Today</a></li>
                          </ul>
