--- a/innovation/innovation.html
+++ b/innovation/innovation.html
@@ -100,13 +100,13 @@
                          prices is driven by the high cost of drug discovery. The statistics show that a drug can cost well 
                          over $1 billion to develop and 90% of the drugs that enter phase 1 fail to reach commercial. The high cost comes from 
                          the high level of failure. Bringing technology into the discovery process can help lower the cost. 
-                         It can automate complex processes by replacing workers with robotics. This can save a lot on cost 
+                         It can automate complex processes by replacing workers with robotics. This can save a lot on costs 
                          and remove human error. Automation in the lab is a big cost savings to many companies. The other 
                          place where technology can really help is using Artificial Intelligence and Machine Learning 
                          algorithms to improve on the rate of success and help lower costs. In traditional drug discovery, 
                          hundreds of molecules would have to be tested by hand in the lab to see which molecule would 
                          perform best. The use of AI and ML algorithms can screen thousands of molecules and model which 
-                         ones have the highest rates of success. This can significantly reduce cost and improve rates of 
+                         ones have the highest rates of success. This can significantly reduce costs and improve rates of 
                          success. The use of AI can also be used to take genetic and biological data and make connections 
                          between mechanisms of biology and genetics that we may never have thought of before. This can open 
                          up new potential breakthroughs in diseases that have been hard to crack like Alzheimer's. The future 
@@ -120,8 +120,8 @@
                          reasoning. This might sound like the plot of some science fiction movie, but it can have a huge impact 
                          on the discovery of new drugs. I can sit down and read all the literature on every disease and every 
                          drug. It would probably take me 100 years. The computer can take all that information and store it. It 
-                         can recall it at any time and it can use it to make conclusions from that data. It can take reasoning 
-                         that we do as humans and grow it to a massive scale. They can feed it all the genetic data on diseases 
+                         can recall it at any time and it can use it to make conclusions from that data. It can take the reasoning 
+                         we do as humans and grow it to a massive scale. They can feed the AI all the genetic data on diseases 
                          from millions of patients, and the AI can take that data and make conclusions about why some patients 
                          respond better to one drug while others respond poorly. It can take all the clinical data from all the 
                          drugs ever discovered and use them to make conclusions about which drugs might work best together and 
@@ -146,7 +146,7 @@
                     <p>
                          This has been around for a long time if you ever used one of those computer aided design programs to 
                          build a house on your computer. In drug discovery, this is about building models for chemistry and 
-                         physics. We can model how a protein folds and moves and it works. We can model how antibodies bind and 
+                         physics. We can model how a protein folds and moves as it performs its work. We can model how antibodies bind and 
                          react to pathogens. All of these computer modeling programs can help scientists do in a few hours or 
                          days what would have taken them weeks or months in the lab. There is even a potential to generate data 
                          from models like the physics or chemistry of drug compounds and use them to create data which can 
@@ -204,7 +204,7 @@
                          genes in the bacterial genome that were repeated. They named these segments Clustered Regularly 
                          Interspaced Palindromic Repeats or CRISPR. Bacteria have an immune system to help protect them from 
                          viruses called bacteriophages. These viruses would bind to and inject their DNA into the bacteria and 
-                         use it to make more viruses. There was a series of enzymes that would chop up a virus's DNA and insert 
+                         use it to make more viruses. The bacteria have a series of enzymes that can chop up a virus's DNA and insert 
                          pieces of that DNA into the bacteria's genome in this CRISPR region. Then another set of enzymes would 
                          turn those segments into small fragments of RNA which would be loaded into a CRISPR associated enzyme or 
                          CAS enzyme that would use that RNA as a guide to seek out the bacteria DNA and chop it up. Scientists 
@@ -268,7 +268,7 @@
                          rewrite life. We can now alter the behavior of cells by changing their DNA and rewriting the code of 
                          life. This has been used for years in some limitations like Genetically Modified Organisms to help 
                          improve crops or raise bigger Salmon. Today, we have the tools to go much further and completely 
-                         reimagine life. This being used in two categories with Synthetic Biology and Induced Pluripotent Stem 
+                         reimagine life. This is being used in two categories with Synthetic Biology and Induced Pluripotent Stem 
                          Cells &#40;iPSC&#41;. 
                     </p>
                     <h3 class="sub-header">Synthetic Biology</h3>
@@ -288,7 +288,7 @@
                          Induced Pluripotent Stem cells is an older technology that was discovered about 10 years ago. It was 
                          about taking differentiated cells like skin cells, and engineering them back into stem cells where they 
                          can be developed into any cell of the body. Stem Cells are immortal and they create all the cells of the 
-                         body. To induce a differentiated cell into a stem cell uses a series of transcription factors which 
+                         body. To induce a differentiated cell into a stem cell, they use a series of transcription factors which 
                          remodel the DNA of the cells and turn them back into the stem cells state. For a long time this 
                          technology really had no purpose. Then along came CRISPR gene editing and everything changed. The 
                          ability to take these stem cells produced by iPSC and edit them using CRISPR opened up endless 
@@ -346,7 +346,7 @@
                          within the sequencing space from the companies that build the actual machines, to the companies that 
                          make the kits to collect the sample to the companies that collect the samples and record the results. 
                          All of them play a role in testing patients for genetics. The major driver of this space is cancer 
-                         genetic testing. This is a rapidly growing field of sequencing and dwarfs all the other uses for 
+                         genetic testing. This is a rapidly growing field of sequencing, and it dwarfs all the other uses for 
                          sequencing. One of the most popular tests is the Minimal Residual Disease test which tests if any cancer 
                          cells are still detectable after treatment. When it comes to cancer, it is treat, test and treat again 
                          until there is no detectable cancer left.
@@ -355,7 +355,7 @@
                     <p>
                          The one place where genetics really matters in medicine is cancer. Cancer is a genetic mutation that 
                          drives uncontrolled cell growth. Some of this genetic mutation can be inherited while some can be 
-                         acquired from environmental factors like chemical exposure. To make cancer even worse each cell in each 
+                         acquired from environmental factors like chemical exposure. To make cancer even worse, each cell in each 
                          tumor in each person can have vastly different genetic mutations. Targeted therapies like Kinase 
                          inhibitors target the specific mutations in a cell that drive the uncontrolled growth. Many of these 
                          mutations occur in the many signaling pathways inside a cell that regulate cell behavior. When one of 
