Companies Page Update

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="news-title">Website Updates</h2>
+
+                              <p> 
+                                   <strong>3/3/2023: </strong> Added some new styling to the Companies Page. I added the last updated date to the 
+                                   main page for quick reference.
+                              </p>
                               <p> 
                                    <strong>3/3/2023: </strong> Started with some new styling on the website. So far, I got the Innovation 
                                    Page done. This is part of making it look better.
