--- a/companies/companies.html
+++ b/companies/companies.html
@@ -86,19 +86,19 @@
                          <h2>TechBio</h2>
                          <ul>
                               <li>
-                                   <a href="relay.html">Relay Therapeutics (RLAY)</a>
+                                   2/24/23 <a href="relay.html">Relay Therapeutics (RLAY)</a>
                               </li>
                               <li>
-                                   <a href="recursion.html">Recursion Pharma (RXRX)</a>
+                                   2/28/23 <a href="recursion.html">Recursion Pharma (RXRX)</a>
                               </li>
                               <li>
-                                   <a href="exscientia.html">Exsientia (EXAI)</a>
+                                   1/13/23 <a href="exscientia.html">Exsientia (EXAI)</a>
                               </li>
                               <li>
-                                   <a href="abcellera.html">AbCellera (ABCL)</a>
+                                   2/21/23 <a href="abcellera.html">AbCellera (ABCL)</a>
                               </li>
                               <li>
-                                   <a href="schrodinger.html">Schrodinger (SDGR)</a>
+                                   3/1/23 <a href="schrodinger.html">Schrodinger (SDGR)</a>
                               </li>
                          </ul>
                     </div>
@@ -107,34 +107,19 @@
                          <h2>CRISPR</h2>
                          <ul>
                               <li>
-                                   <a href="beam.html">Beam Therapeutics (BEAM)</a>
+                                   2/28/23 <a href="beam.html">Beam Therapeutics (BEAM)</a> 
                               </li>
                               <li>
-                                   <a href="intellia.html">Intellia Therapeutics (NTLA)</a>
+                                   2/24/23 <a href="intellia.html">Intellia Therapeutics (NTLA)</a>
                               </li>
                               <li>
-                                   <a href="crispr.html">CRISPR Therapeutics (CRSP)</a>
+                                   2/21/23 <a href="crispr.html">CRISPR Therapeutics (CRSP)</a>
                               </li>
                               <li>
-                                   <a href="verve.html">Verve Therapeutics (VERV)</a>
+                                   3/2/23 <a href="verve.html">Verve Therapeutics (VERV)</a>
                               </li>
                               <li>
-                                   <a href="prime.html">Prime Medicines (PRME)</a>
-                              </li>
-                         </ul>
-                    </div>
-
-                    <div class="company-list">
-                         <h2>Sequencing</h2>
-                         <ul>
-                              <li>
-                                   <a href="invitae.html">Invitae (NVTA)</a>
-                              </li>
-                              <li>
-                                   <a href="pacbio.html">PacBio (PACB)</a>
-                              </li>
-                              <li>
-                                   <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
+                                   1/13/23 <a href="prime.html">Prime Medicines (PRME)</a>
                               </li>
                          </ul>
                     </div>
@@ -143,10 +128,10 @@
                          <h2>SynBio</h2>
                          <ul>
                               <li>
-                                   <a href="ginkgo.html">Gingko Bioworks (DNA)</a>
+                                   3/1/23 <a href="ginkgo.html">Gingko Bioworks (DNA)</a>
                               </li>
                               <li>
-                                   <a href="twist.html">Twist Bioscience (TWST)</a>
+                                   2/13/23 <a href="twist.html">Twist Bioscience (TWST)</a>
                               </li>
                          </ul>
                     </div>
@@ -155,37 +140,58 @@
                          <h2>iPSC</h2>
                          <ul>
                               <li>
-                                   <a href="ipsc.html">Century Therapeutics (IPSC)</a>
+                                   1/13/23 <a href="ipsc.html">Century Therapeutics (IPSC)</a>
                               </li>
                               <li>
-                                   <a href="sana.html">Sana Biotechnology (SANA)</a>
+                                   1/12/23 <a href="sana.html">Sana Biotechnology (SANA)</a>
                               </li>
                               <li>
-                                   <a href="fate.html">Fate Therapeutics (FATE)</a>
+                                   3/1/23 <a href="fate.html">Fate Therapeutics (FATE)</a>
                               </li>
                               <li>
-                                   <a href="caribou.html">Caribou Biosciences (CRBU)</a>
+                                   1/14/23 <a href="caribou.html">Caribou Biosciences (CRBU)</a>
                               </li>
                          </ul>
                     </div>
 
                     <div class="company-list">
-                         <h2>Targeted Therapies</h2>
+                         <h2>Sequencing</h2>
                          <ul>
                               <li>
-                                   <a href="blueprint.html">Blueprint Medicines (BPMC)</a>
+                                   2/23/23 <a href="invitae.html">Invitae (NVTA)</a>
                               </li>
                               <li>
-                                   <a href="mirati.html">Mirati Therapeutics (MRTX)</a>
+                                   3/1/23 <a href="pacbio.html">PacBio (PACB)</a>
                               </li>
                               <li>
-                                   <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
+                                   1/31/23 <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
+                              </li>
+                         </ul>
+                    </div>
+
+                    <div class="company-list">
+                         <h2>Kinase Inhibitors</h2>
+                         <ul>
+                              <li>
+                                   2/23/23 <a href="blueprint.html">Blueprint Medicines (BPMC)</a>
                               </li>
                               <li>
-                                   <a href="revolution.html">Revolution Medicines (RVMD)</a>
+                                   2/28/23 <a href="mirati.html">Mirati Therapeutics (MRTX)</a>
                               </li>
                               <li>
-                                   <a href="monterosa.html">MonteRosa Therapeutics (GLUE)</a>
+                                   2/27/23 <a href="revolution.html">Revolution Medicines (RVMD)</a>
+                              </li>
+                         </ul>
+                    </div>
+
+                    <div class="company-list">
+                         <h2>Protein Degraders</h2>
+                         <ul>
+                              <li>
+                                   2/23/23 <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
+                              </li>
+                              <li>
+                                   1/15/23 <a href="monterosa.html">MonteRosa Therapeutics (GLUE)</a>
                               </li>
                          </ul>
                     </div>
